--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.13.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
